added an eventLIstener for mouseover where the square turns red, added a hover affect for entering and leaving a div. added prompt  onclick and cleared existing grid. negerated new grid based on user inpout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 <h1>16x16 Grid of squares</h1>
+<div id="button1"></div>
 <div id="grid-here"></div>
+<div id="grid-here2"></div>
 
 
 
